--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.2",
+    "mongoose": "^5.3.15",
     "nunjucks": "~3.0.0"
   },
   "devDependencies": {
