--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "build": "babel app.js -d dist",
+    "start": "pm2 start app.js --watch",
+    "stop": "pm2 stop 0"
   },
   "dependencies": {
     "debug": "~2.6.8",
@@ -20,7 +22,13 @@
     "nunjucks": "~3.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "7.1.1",
-    "eslint": "3.18.0"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "3.18.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-promise": "^4.0.1"
   }
 }
