--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,9 +20,9 @@ rules:
         var: 2
         let: 2
         const: 3
-  linebreak-style:
-    - error
-    - unix
+#  linebreak-style:
+#    - error
+#    - unix
   quotes:
     - error
     - single
