--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "log": "pm2 logs 0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "debug": "~2.6.8",
+    "form-data": "^2.4.0",
     "koa": "^2.3.0",
+    "koa-body": "^4.1.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
@@ -20,8 +23,11 @@
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.2",
+    "koa2-formidable": "^1.0.2",
     "mongoose": "^5.3.15",
-    "nunjucks": "~3.0.0"
+    "nunjucks": "~3.0.0",
+    "request": "^2.88.0",
+    "upyun": "^3.3.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
